--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Подключаем ваш кастомный CSS -->
   <!-- {% load static %} -->
   <!-- <link rel="stylesheet" href="{% static 'css/style.css' %}"> -->
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="style.css">
 
 </head>
 <body class="bg-dashboard min-h-screen flex">
@@ -122,3 +122,4 @@
 
 </body>
 </html>
+
