--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <!-- Подключаем ваш кастомный CSS -->
   <!-- {% load static %} -->
   <!-- <link rel="stylesheet" href="{% static 'css/style.css' %}"> -->
-  <link rel="stylesheet" href="style.css">
+  <!-- <link rel="stylesheet" href="style.css"> -->
+  <link rel="stylesheet" type="text/css" href="https://zerg959.github.io/style.css">
 
 </head>
 <body class="bg-dashboard min-h-screen flex">
@@ -122,4 +123,5 @@
 
 </body>
 </html>
+
 
